fix: safe area gap (#4)

--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -17,15 +17,15 @@
   --calculator-operator-bg-color: var(--ahnn-warning);
 
   --app-gap: 0 10px;
+  --app-gap-top: env(safe-area-inset-top);
+  --app-gap-bottom: calc(
+    var(--tabbar-height) + var(--home-select-month-height) + var(--gap) +
+      env(safe-area-inset-bottom)
+  );
   --inline-gap: 10px;
   --gap: 20px;
   --radius: 5px;
 
   --tabbar-height: 50px;
   --home-select-month-height: var(--ahnn-form-height);
-
-  --app-padding-bottom: calc(
-    var(--tabbar-height) + var(--home-select-month-height) + var(--gap) +
-      env(safe-area-inset-bottom)
-  );
 }
